# brishack-25

.github/workflows/: rust.yml
Documentaion/: endpoints.md
Shiyali/: settings.gradle.kts
Shiyali/app/src/main/: AndroidManifest.xml
Shiyali/app/src/main/java/com/example/shiyali/ui/: BottomNavigationBar.kt  Navigation.kt
Shiyali/app/src/main/java/com/example/shiyali/ui/home/: Home.kt
Shiyali/app/src/main/java/com/example/shiyali/ui/theme/: Theme.kt  Type.kt
Shiyali/app/src/main/res/values/: strings.xml
Shiyali/app/src/test/java/com/example/shiyali/: ExampleUnitTest.kt
client/: .gitignore
client/app/: build.gradle.kts
client/app/src/androidTest/java/com/example/Shiyali/: ExampleInstrumentedTest.kt
client/app/src/androidTest/java/com/example/shiyali/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/example/Shiyali/: MainActivity.kt
client/app/src/main/java/com/example/shiyali/: MainActivity.kt
client/app/src/main/java/com/example/shiyali/ui/item/: Item.kt
client/app/src/main/res/drawable/: placeholder.xml
client/app/src/main/res/navigation/: mobile_navigation.xml
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/main/res/values-night/: themes.xml
client/app/src/test/java/com/example/Shiyali/: ExampleUnitTest.kt
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  Cargo.toml
server/migrations/: 1_init.sql  1_items.sql
server/src/: auth.rs  database.rs  example.rs  image.rs  items.rs  main.rs  tags.rs
(+9 files in other folders)
