[package]
name = "library-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
